# Mania-Fuelled-Paranoia-QR-Backups

./: .gitignore  .tex  JIS x 0208.xlsx  README.md  TODO.md  justfile  justfile.back  main.tex  pyproject.toml  ruff.mini.toml  t  tt
archive/math/: discrete.tex  main.tex
archive/qr/: main.tex  shift_jis_x_0208.tex
centennial_archival_project/allaboutqr/: backup.py
data/: JIS x 0208.xlsx  jis_x_0208_table.xlsx
data/QR code versions/: 1.html  2.html  3.html  4.html
dev/values/constants/: main.yaml
latex_docs/: 1_thesis.tex  2_codex.tex  base.cls  build.sh  codex.tex  main.bbl-SAVE-ERROR  main.tex  preamble.tex  thesis.back.cls  thesis.cls
latex_docs.back/: codex.tex  end.tex  guidethesis.cls  header.tex  refs.bib
latex_docs/1_thesis/: abstract.tex  acknowledgements.tex  acknowlegements.tex  appendix1.tex  appendix2.tex  conclusions.tex  dedication.tex  preface.tex  statement_of_originality.tex
latex_docs/1_thesis/chapters/: 1_introduction.tex  2_rrl.tex  3_methodology.tex  4_data_presentation.tex  5_conclusion.tex
latex_docs/2_codex/: acknowledgements.tex  dedication.tex  preface.tex
latex_docs/2_codex/math/: main.tex
latex_docs/2_codex/qr/: main.tex  shift_jis_x_0208.tex
latex_docs/archive/math/: discrete.tex  main.tex
latex_docs/archive/qr/: main.tex  shift_jis_x_0208.back.tex  shift_jis_x_0208.tex
scripts/: jis_x_0208_to_tex.py  merge_fonts.py  raw2dict.py  raw_uc_jis_x_0208_to_xlsx.py  ttf-conv.sh  versions.py
thesis/: abstract.tex  acknowlegements.tex  appendix1.tex  appendix2.tex  base.cls  build.sh  conclusions.tex  dedication.tex  main.tex  preamble.tex  preface.tex  statement_of_originality.tex  thesis-main.tex  thesis.cls
thesis/chapters/: 3_methodology.tex
thesis/chp1/: doc1.tex
thesis/chp2/: doc2.tex  fig1.tex
thesis/math/: discrete.tex  main.tex
thesis/qr/: main.tex  shift_jis_x_0208.tex
