[project]
name = "allaboutqr"
license = "MIT"
version = "0.1.0"
description = "None"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "alltheutils>=3.0.0",
    "pillow>=11.2.1",
    "qrcode>=8.2",
    "reedsolo>=1.7.0",
    "openpyxl>=3.1.5",
]
maintainers = [
    { name = "whinyaan", email = "whinyaan@disroot.org" },
]
keywords = ["utility"]
classifiers=[
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[project.urls]
homepage = "https://python-poetry.org/"
repository = "https://github.com/whinee/AllAboutQR"
documentation = "https://github.com/whinee/AllAboutQR/tree/main/docs"
"Bug Tracker" = "https://github.com/whinee/AllAboutQR/issues"


[dependency-groups]
dev = [
    "alltheutils>=3.0.1",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "erdantic>=1.1.0.post1",
    "mypy>=1.15.0",
    "no-implicit-optional>=1.4",
    "pdoc3>=0.11.5",
    "pytest>=8.3.4",
    "pytest-md-report>=0.7.0",
    "python-minifier>=2.11.3",
    "rich>=13.9.4",
    "ruamel-yaml>=0.18.10",
    "ruff>=0.9.6",
    "scriptmerge>=3.1.0",
    "stickytape>=0.2.1",
    "translate-toolkit>=3.15.2",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[tool.setuptools.packages.find]
include = ["centennial_archival_project"]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.mypy]
disable_error_code = ["import", "attr-defined", "no-untyped-call"]

[tool.ruff]
line-length = 88

target-version = "py311"

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    # "DTZ",
    "E",
    "F",
    "I",
    "INP",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "UP"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "UP"
]
unfixable = []

ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D205",
    "D212",
    "D401",
    "D406",
    "D407",
    "D417",
    "E501",
    "I002",
    "N812",
    "N818",
    "RET503",
    "S101",
    "UP007",
    "UP032",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "pyenv",
    "venv",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false
